# kitt

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCKER_READ_ME.md  Dockerfile  LICENSE  README.md  dead-branches.md  rust-toolchain.toml
.github/workflows/: docker-image.yml
docs/plans/: 2026-01-19-refactor-readability-design.md  2026-01-19-refactor-readability-impl.md  2026-01-30-kitt-core-extraction-design.md  2026-01-30-kitt-core-implementation.md  2026-01-31-use-existing-topic-design.md  2026-01-31-use-existing-topic-impl.md
kitt/: Cargo.toml  build.rs
kitt-core/: Cargo.toml  README.md
kitt-core/src/: client.rs  config.rs  consts.rs  consumer.rs  error.rs  events.rs  lib.rs  producer.rs  runner.rs  utils.rs
kitt/src/: args.rs  consts.rs  consumer.rs  kafka_client.rs  lib.rs  logo.txt  main.rs  measurer.rs  producer.rs  profiling.rs  thread_assignment.rs  ui.rs
kitt_throbbler/: Cargo.toml  README.md
kitt_throbbler/examples/: audio_check.rs  audio_test.rs  embedded_audio_test.rs  practical_demo.rs  precision_timing_demo.rs  simple_demo.rs
kitt_throbbler/src/: lib.rs
src/: kafka_client.rs  main.rs
