[package]
name = "kitt-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Kafka throughput testing"
license = "MIT"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]

[lib]
name = "kitt_core"
path = "src/lib.rs"

[dependencies]
kafka-protocol = { version = "0.15.1", features = ["broker", "messages_enums"] }
tokio = { version = "1.41.0", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.80"
tracing = "0.1.37"
bytes = "1.10.1"
crc32c = "0.6"
serde = { version = "1.0.179", features = ["derive"] }
futures = "0.3"
indexmap = "2.0.0"
uuid = { version = "1.3.4", features = ["v4"] }
