[package]
name = "kitt"
version = "0.2.0"
edition = "2021"
description = "Kafka throughput measurement tool"
license = "MIT"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
keywords = ["kafka", "throughput", "benchmark", "performance", "messaging"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "kitt"
path = "src/lib.rs"

[[bin]]
name = "kitt"
path = "src/main.rs"

[dependencies]
kafka-protocol = { version = "0.15.1", features = ["broker", "messages_enums"] }
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.3.4", features = ["v4"] }
rand = "0.8.5"
anyhow = "1.0.80"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bytes = "1.10.1"
crc32c = "0.6"
serde = { version = "1.0.179", features = ["derive"] }
chrono = "0.4.38"
futures = "0.3"
indexmap = "2.0.0"
kitt_throbbler = { path = "../kitt_throbbler" }
quantum-pulse = { version = "0.1.6", features = ["full"] }
mimalloc = "0.1"
